force-app/main/default/objects/ssot__GoalAssignment__dlm/fields/ssot__AssignedByObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssignedByObject__c</fullName>
    <label>Assigned By Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssignedByObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>