force-app/main/default/objects/ssot__GoalAssignment__dlm/fields/ssot__AssignedByRecordId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssignedByRecordId__c</fullName>
    <label>Assigned By Record</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssignedByRecordId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>