force-app/main/default/objects/ssot__GoalAssignment__dlm/fields/ssot__CompletionPercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__CompletionPercent__c</fullName>
    <label>Completion Percentage</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CompletionPercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>