force-app/main/default/objects/ssot__GoalAssignment__dlm/fields/ssot__DescriptionCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DescriptionCodeId__c</fullName>
    <label>Description Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DescriptionCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>