force-app/main/default/objects/ssot__GoalAssignment__dlm/fields/ssot__GoalType__c.field-meta.xml
<CustomField>
    <fullName>ssot__GoalType__c</fullName>
    <label>Goal Type</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GoalType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>