force-app/main/default/objects/ssot__GoalAssignment__dlm/fields/ssot__IsContinuousGoal__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsContinuousGoal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Continuous Goal</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsContinuousGoal</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>