force-app/main/default/objects/ssot__GoalAssignment__dlm/fields/ssot__ProgressStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProgressStatus__c</fullName>
    <label>Progress Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProgressStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>