force-app/main/default/objects/ssot__GoalAssignment__dlm/fields/ssot__rel_1716668773019_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716668773019_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GoalAssignment_ParentRecordId_map_Ca_rel</label>
    <referenceTo>ssot__CarePlan__dlm</referenceTo>
    <relationshipLabel>GoalAssignment_ParentRecordId_map_Ca_rel</relationshipLabel>
    <relationshipName>rel_1716668773019_end</relationshipName>
    <type>Lookup</type>
</CustomField>