force-app/main/default/objects/ssot__GoalAssignment__dlm/fields/ssot__StatusDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__StatusDateTime__c</fullName>
    <label>Status Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StatusDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>