force-app/main/default/objects/ssot__GoalAssignment__dlm/fields/ssot__TargetCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__TargetCompletionDate__c</fullName>
    <label>Target Completion Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TargetCompletionDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>